# Rust_SC_Chat_Client

./: .gitignore  Cargo.toml  README.md
src/: chat_tui.rs  main.rs
