[package]
name = "rust_sc_chat_client"
version = "0.1.0"
authors = ["Kirill Ivanov <bragov4ik@hotmail.com>", 
           "Kirill Glinsky <k.glinsky@innopolis.university>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2"
crossterm = "0.19.0"
